# ControlBox_RFID_Producer

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  MainApp.cpp
app/config/: DeviceConfig.cpp  MdtuProv.cpp  sensor.ini  sensor_dev.ini
app/core/: AppData.cpp  CMakeLists.txt  CanComThread.cpp  CanData.cpp  CycleQueue.cpp  DataFormater.cpp  DataReportThread.cpp  ExceptionDataProcessThread.cpp  GlobalFlag.cpp  GpsComThread.cpp  MsgDispatcher.cpp  MsgWorkerThread.cpp  OfflineDataReportThread.cpp  ReportWorkerThread.cpp  SensorComThread.cpp  SensorData.cpp  SensorMsgDispatcher.cpp  SensorWorkerThread.cpp  UIComThread.cpp  UIData.cpp  UIMsgDispatcher.cpp  UIWorkerThread.cpp  WatchDogThread.cpp  WeighAlgorithm.cpp  WeighData.cpp
app/database/: DB.cpp  DBExceptionData.cpp  DBWeighData.cpp
app/device/can/: CMakeLists.txt  CanDBC.cpp  CanFDSock.cpp  CanFrame.cpp  CanManager.cpp  CanSock.cpp
app/device/gps/: CMakeLists.txt  GPS.cpp
app/device/rfid/: CMakeLists.txt  CNNTRfidReader.cpp
app/device/rs485/: Rs485.cpp
app/device/screen/: CMakeLists.txt  Dwin.cpp
app/device/sensor/: CMakeLists.txt  GC31.cpp  TDA04d.cpp  ZY4701.cpp
app/device/serial/: SerialPort.cpp
app/network/: MqttReportThread.cpp  MqttThread.cpp
app/socket/: CMakeLists.txt  TcpClient.cpp
app/utility/: AlgorithmUtil.cpp  IPC.cpp  Utility.cpp
include/base/: Base.h  Version.h
include/config/: DeviceConfig.h  MdtuProv.h
include/core/: AppData.h  CanComThread.h  CanData.h  CycleQueue.h  DataDef.h  DataFormater.h  DataReportThread.h  ExceptionDataProcessThread.h  GlobalFlag.h  GpsComThread.h  MsgDispatcher.h  MsgWorkerThread.h  OfflineDataReportThread.h  ReportWorkerThread.h  SensorComThread.h  SensorData.h  SensorMsgDispatcher.h  SensorWorkerThread.h  UIComThread.h  UIData.h  UIMsgDispatcher.h  UIWorkerThread.h  WatchDogThread.h  WeighAlgorithm.h  WeighData.h
include/database/: DB.h  DBExceptionData.h  DBWeighData.h
include/device/: Device.h
include/device/can/: CanConst.h  CanDBC.h  CanFDSock.h  CanFrame.h  CanManager.h  CanSock.h
include/device/gps/: GPS.h
include/device/rfid/: CNNTRfidReader.h
include/device/rs485/: Rs485.h
include/device/screen/: Dwin.h
include/device/sensor/: GC31.h  TDA04d.h  ZY4701.h
include/device/serial/: PortInfo.h  SerialPort.h
include/network/: MqttReportThread.h  MqttThread.h
include/socket/: TcpClient.h
include/utility/: AlgorithmUtil.h  IPC.h  Utility.h
lib/arm/libcurl/: libcurl.la
lib/arm/libcurl/pkgconfig/: libcurl.pc
lib/arm/sqlite/: libsqlite3.la
lib/arm/sqlite/pkgconfig/: sqlite3.pc
lib/linux/libcurl/: libcurl.la
lib/linux/libcurl/pkgconfig/: libcurl.pc
lib/linux/sqlite/: libsqlite3.la
lib/linux/sqlite/pkgconfig/: sqlite3.pc
